--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -26,7 +26,7 @@
     &-title {
         position: relative;
         bottom: $video-height / -2;
-        font-size: 2.5em;
+        font-size: 3em;
         font-weight: 200;
         margin: 1em;
     }
@@ -112,4 +112,10 @@
             padding: .5em;
         }
     }
+}
+
+.footer {
+    opacity: .8;
+    padding: 1em;
+    text-align: center;
 }
