--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="nav">
     <ul class="nav-left">
-        <li class="nav-item"><img src="./assets/ozon-logo.png" class="nav-logo" /></li>
+        <li class="nav-item nav-item-logo"><img src="./assets/logo-ozon.png" class="nav-logo" /></li>
     </ul>
 
     <ul class="nav-right">
