--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,5 +1,6 @@
 @import "../lace/src/scss/base";
 @import "../lace/src/scss/grid";
+@import "../lace/src/scss/dropshadow";
 
 @include grid($block-size: 10em, $columns: 12, $gutter: 1.5em);
 
@@ -32,6 +33,8 @@
     }
 
     &-video {
+        @include dropshadow(3);
+
         position: relative;
         bottom: $video-height / -2;
         background-image: url(../assets/tablet.png);
@@ -43,7 +46,7 @@
         max-width: 100%;
         margin: auto;
         border-radius: $roundness;
-        box-shadow: 0 1.5px 3px rgba(0,0,0,.5);
+        cursor: pointer;
     }
 }
 
@@ -65,11 +68,16 @@
 
     &-item {
         display: inline-block;
-        padding: 1em;
 
-        &-logo { padding: 0; }
+        a {
+            display: inline-block;
+            padding: 1em;
+            color: currentColor;
 
-        a { color: currentColor; }
+            opacity: .8;
+
+            &:focus, &:hover, &:active { opacity: 1; }
+        }
     }
 
     &-logo {
@@ -93,14 +101,27 @@
 .section-centered { text-align: center; }
 
 .button-download {
+    @include dropshadow(1);
+
     display: inline-block;
-    background-color: #11AA89;
+    background-color: $accent-color;
     border-radius: $roundness;
     margin: .67em;
     padding: .5em 1em;
     font-size: 1.5em;
+    color: $light-color;
 
-    &, &:focus, &:hover, &:active { color: $light-color; }
+    &:focus, &:hover {
+        @include dropshadow(2);
+
+        background-color: darken($accent-color, 5%);
+        color: $light-color;
+    }
+
+    &:active {
+        background-color: darken($accent-color, 10%);
+        color: $light-color;
+    }
 
     &-info {
         opacity: .8;
