--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,9 +4,9 @@
     </ul>
 
     <ul class="nav-right">
-        <li class="nav-item"><a href="">About</a></li>
-        <li class="nav-item"><a href="">Store</a></li>
-        <li class="nav-item"><a href="">Docs</a></li>
-        <li class="nav-item"><a href="">Contribute</a></li>
+        <li class="nav-item"><a href="./wip.html">About</a></li>
+        <li class="nav-item"><a href="./wip.html">Store</a></li>
+        <li class="nav-item"><a href="./wip.html">Docs</a></li>
+        <li class="nav-item"><a href="./wip.html">Contribute</a></li>
     </ul>
 </nav>
