--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,16 @@
         <li class="nav-item nav-item-logo"><img src="./assets/logo-ozon.png" class="nav-logo" /></li>
     </ul>
 
+    <a class="nav-menu">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 6.3499997 6.3500001">
+            <g transform="translate(0 -290.253)">
+                <path id="a" d="M0 293.164h6.35v.53H0z" fill="#fff" stroke-width=".265"/>
+                <use xlink:href="#a" transform="translate(0 -1.323)" width="100%" height="100%"/>
+                <use xlink:href="#a" transform="translate(0 1.323)" width="100%" height="100%"/>
+            </g>
+        </svg>
+    </a>
+
     <ul class="nav-right">
         <li class="nav-item"><a href="./wip.html">About</a></li>
         <li class="nav-item"><a href="./wip.html">Store</a></li>
