--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -191,6 +191,11 @@ html, body { height: 100%; }
         color: $light-color;
     }
 
+    &-icon {
+        vertical-align: -5px;
+        margin-right: .5em;
+    }
+
     &-info {
         opacity: .8;
 
