--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,23 @@
 
     <link rel="shortcut icon" href="{{ '/assets/images/favicon.png' | prepend: site.baseurl }}">
 
+    <link rel="apple-touch-icon" sizes="57x57" href="{{ '/favicon/apple-touch-icon-57x57.png' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{ '/favicon/apple-touch-icon-60x60.png' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ '/favicon/apple-touch-icon-72x72.png' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ '/favicon/apple-touch-icon-76x76.png' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ '/favicon/apple-touch-icon-114x114.png' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ '/favicon/apple-touch-icon-120x120.png' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ '/favicon/apple-touch-icon-144x144.png' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ '/favicon/apple-touch-icon-152x152.png' | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/favicon/apple-touch-icon-180x180.png' | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{ '/favicon/favicon-32x32.png' | prepend: site.baseurl }}" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{ '/favicon/android-chrome-192x192.png' | prepend: site.baseurl }}" sizes="192x192">
+    <link rel="icon" type="image/png" href="{{ '/favicon/favicon-96x96.png' | prepend: site.baseurl }}" sizes="96x96">
+    <link rel="icon" type="image/png" href="{{ '/favicon/favicon-16x16.png' | prepend: site.baseurl }}" sizes="16x16">
+    <link rel="manifest" href="{{ '/favicon/manifest.json' | prepend: site.baseurl }}">
+    <link rel="shortcut icon" href="{{ '/favicon/favicon.ico' | prepend: site.baseurl }}">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" type="text/css"  media="screen" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700">
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/css/main.css'  | prepend: site.baseurl  }}">
