Fix SCSS lint warnings

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,7 +45,8 @@
     <link rel="icon" type="image/png" href="{{ '/favicon/favicon-16x16.png' | prepend: site.baseurl }}" sizes="16x16">
     <link rel="manifest" href="{{ '/favicon/manifest.json' | prepend: site.baseurl }}">
     <link rel="shortcut icon" href="{{ '/favicon/favicon.ico' | prepend: site.baseurl }}">
-    <meta name="theme-color" content="#ffffff">
+
+    <meta name="theme-color" content="#9575cd">
 
     <link rel="stylesheet" type="text/css"  media="screen" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700">
 
