--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="nav">
     <ul class="nav-left">
-        <li class="nav-item nav-item-logo"><img src="./assets/logo-ozon.png" class="nav-logo" /></li>
+        <li class="nav-item nav-item-logo"><a href="./index.html"><img src="./assets/logo-ozon.png" class="nav-logo" /></a></li>
     </ul>
 
     <a class="nav-menu">
@@ -18,5 +18,6 @@
         <li class="nav-item"><a href="./wip.html">Store</a></li>
         <li class="nav-item"><a href="./wip.html">Docs</a></li>
         <li class="nav-item"><a href="./wip.html">Contribute</a></li>
+	<li class="nav-item"><a href="./faq.html">FAQ</a></li>
     </ul>
 </nav>
