--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,6 +18,6 @@
         <li class="nav-item"><a href="./wip.html">Store</a></li>
         <li class="nav-item"><a href="./wip.html">Docs</a></li>
         <li class="nav-item"><a href="./wip.html">Contribute</a></li>
-	<li class="nav-item"><a href="./faq.html">FAQ</a></li>
+	<li class="nav-item"><a href="/faq">FAQ</a></li>
     </ul>
 </nav>
