Remove dthe background tag test.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -175,7 +175,7 @@ width : 24px;
 height : 24px;
 vertical-align : middle;
 margin: 0px 8px 0 0;
-background : black;
+/*background : black; *\
 }
 
 .button-download {
