Download page responsive buttons

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -274,3 +274,13 @@ html, body { height: 100%; }
         }
     }
 }
+
+
+// Responsive utilities
+
+// Mobile Portrait Size to Mobile Landscape Size (devices and browsers)
+@media only screen and (max-width: 479px) {
+    .display-sm-block {
+        display: block;
+    }
+}
