--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -19,7 +19,7 @@ html, body { height: 100%; }
     font-weight: 200;
 }
 
-.title-download {
+.title-dark {
     font-size: 3em;
     font-weight: 200;
     color: #555555;
