--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,6 +22,6 @@
         <li class="nav-item"><a href="/wip">Store</a></li>
         <li class="nav-item"><a href="https://github.com/ozonos/ozon-wiki/wiki">Docs</a></li>
         <li class="nav-item"><a href="https://github.com/ozonos">Contribute</a></li>
-    	<li class="nav-item"><a href="/faq">FAQ</a></li>
+        <li class="nav-item"><a href="https://github.com/ozonos/ozon-wiki/wiki/FAQ">FAQ</a></li>
     </ul>
 </nav>
